evals/aloepri-attacks/results/sweep/ablation-gamma-only-upstream/run.log
[M2.7 quality+humaneval] endpoint=http://127.0.0.1:8063
[M2.7 quality+humaneval] plain-mode (no τ)
[M2.7 quality+humaneval] quality probe (5 prompts)…
  q[0] readable=True (ok) [ 48 tok, 1.3 s] 'The capital of France is' → ' Paris. The capital of the United States is Washington, D.C.'
  q[1] readable=True (ok) [ 48 tok, 1.3 s] 'Q: What is 17 times 4? A:' → ' 68\n\nWhat is 17 times 4? A: 68\n\nWhat is 17 times 4? A: 68\n\nW'
  q[2] readable=True (ok) [ 48 tok, 1.4 s] 'Write a haiku about autumn leaves:' → ' 5-7-5 syllables.\n\nThe leaves fall, golden and bright,  \nA g'
  q[3] readable=True (ok) [ 48 tok, 1.3 s] 'def is_prime(n):' → '\n    if n < 2:\n        return False\n    for i in range(2, in'
  q[4] readable=True (ok) [ 48 tok, 1.3 s] "Translate to French: 'Good morning, how " → " 'Bonjour, comment ça va ?'\n\nYes, that's correct. But I need"
Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.
  → all_readable=True (6.7 s)
[M2.7 quality+humaneval] HumanEval pass@1 (n=20)…
  he[ 0/20] HumanEval/163    fail (384 tok, 10.5 s)   File "/tmp/tmpuz4v9lgd.py", line 24
    ```
    ^
SyntaxError: invalid syntax

  he[ 1/20] HumanEval/28     PASS (384 tok, 10.5 s) 
  he[ 2/20] HumanEval/6      PASS (384 tok, 10.4 s) 
  he[ 3/20] HumanEval/70     fail (384 tok, 10.4 s)   File "/tmp/tmpi7i8na3r.py", line 34
    ```
    ^
SyntaxError: invalid syntax

  he[ 4/20] HumanEval/62     PASS (384 tok, 10.4 s) 
  he[ 5/20] HumanEval/57     fail (384 tok, 10.3 s) Traceback (most recent call last):
  File "/tmp/tmpulr6cwgy.py", line 42, in <mo
  he[ 6/20] HumanEval/35     PASS (384 tok, 10.3 s) 
  he[ 7/20] HumanEval/26     fail (384 tok, 10.5 s) Traceback (most recent call last):
  File "/tmp/tmpyuuy9pci.py", line 33, in <mo
  he[ 8/20] HumanEval/139    fail (384 tok, 10.4 s)   File "/tmp/tmpoa8pz0f5.py", line 22
    Wait, but the function is supposed to 
  he[ 9/20] HumanEval/22     PASS (384 tok, 10.5 s) 
  he[10/20] HumanEval/151    fail (384 tok, 10.5 s)   File "/tmp/tmpnatni988.py", line 30
    But the problem says to ignore numbers
  he[11/20] HumanEval/108    fail (384 tok, 10.5 s)   File "/tmp/tmpwqnxo2s7.py", line 45
    print(count_nums([1, -1, 2, -2, 3, -3,
  he[12/20] HumanEval/8      PASS (384 tok, 10.5 s) 
  he[13/20] HumanEval/7      PASS (384 tok, 10.5 s) 
  he[14/20] HumanEval/23     PASS (384 tok, 10.4 s) 
  he[15/20] HumanEval/55     PASS (384 tok, 10.4 s) 
  he[16/20] HumanEval/59     fail (384 tok, 10.5 s) Traceback (most recent call last):
  File "/tmp/tmp95kyy5a1.py", line 33, in <mo
  he[17/20] HumanEval/129    fail (384 tok, 10.6 s) Traceback (most recent call last):
  File "/tmp/tmp8_szi6iz.py", line 56, in <mo
  he[18/20] HumanEval/161    fail (384 tok, 10.5 s)   File "/tmp/tmpso2quwj6.py", line 30
    ```
    ^
SyntaxError: invalid syntax

  he[19/20] HumanEval/143    fail (384 tok, 10.5 s) Traceback (most recent call last):
  File "/tmp/tmpcd88ajhl.py", line 50, in <mo
  → pass@1 = 9/20 = 0.450 (209 s)
[M2.7 quality+humaneval] wrote evals/aloepri-attacks/results/sweep/ablation-gamma-only-upstream/quality-humaneval.json
